--- a/app/views/admin/posts/edit.html.erb
+++ b/app/views/admin/posts/edit.html.erb
@@ -10,7 +10,20 @@
 
     <%= render "form", post: @post %>
 
-    <div class="mt-4">
+    <div class="mt-3">
+      <%=
+        button_to "Delete Post",
+                  admin_post_path(@post),
+                  method: :delete,
+                  class: "btn btn-danger",
+                  form: {
+                    data: {
+                      turbo_confirm: "Are you sure you want to delete this post?",
+                      turbo_confirm_type: "danger"
+                    }
+                  }
+      %>
+      <br>
       <%= link_to "Show this post", @post.path, target: "_blank" %>
     </div>
   </div>
