--- a/app/views/shared/_left_sidebar.html.erb
+++ b/app/views/shared/_left_sidebar.html.erb
@@ -51,6 +51,8 @@
             <i class="fas fa-user fa-fw me-2"></i><%= t(:about_me) %>
           </a>
         </li>
+
+        <%= locale_switcher %>
       </ul>
 
       <div class="my-2 my-md-3">
