--- a/app/views/admin/main/root.html.erb
+++ b/app/views/admin/main/root.html.erb
@@ -21,6 +21,9 @@
     <%= link_to "Email Subscribers", admin_email_subscribers_path %>
     <br>
     <br>
+    <%= link_to "Manage Locales", admin_locales_path %>
+    <br>
+    <br>
     <%= link_to "Settings", admin_settings_path %>
     <br>
     <br>
