--- a/app/views/admin/posts/edit.html.erb
+++ b/app/views/admin/posts/edit.html.erb
@@ -11,19 +11,24 @@
     <%= render "form", post: @post %>
 
     <div class="mt-3">
-      <%=
-        button_to "Delete Post",
-                  admin_post_path(@post),
-                  method: :delete,
-                  class: "btn btn-danger",
-                  form: {
-                    data: {
-                      turbo_confirm: "Are you sure you want to delete this post?",
-                      turbo_confirm_type: "danger"
+      <div class="d-flex flex-wrap gap-2 mb-3">
+        <a href="<%= admin_post_translations_path(@post) %>">
+          <button type="button" class="btn btn-info"><i class="fas fa-language me-1"></i> Manage Translations</button>
+        </a>
+
+        <%=
+          button_to "Delete Post",
+                    admin_post_path(@post),
+                    method: :delete,
+                    class: "btn btn-danger",
+                    form: {
+                      data: {
+                        turbo_confirm: "Are you sure you want to delete this post?",
+                        turbo_confirm_type: "danger"
+                      }
                     }
-                  }
-      %>
-      <br>
+        %>
+      </div>
       <%= link_to "Show this post", @post.path, target: "_blank" %>
     </div>
   </div>
