--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,6 +14,8 @@
 <section class="blog-list px-3 py-5 p-md-5">
   <div class="container single-col-max-width">
     <% @posts.each do |post| %>
+      <% post.translated! %>
+
       <div class="item mb-5">
         <div class="row g-3 g-xl-0">
           <div class="col-2 col-xl-3">
@@ -21,7 +23,11 @@
           </div>
 
           <div class="col">
-            <h3 class="title mb-1"><a class="text-link" href="<%= post.path %>"><%= post.title %></a></h3>
+            <h3 class="title mb-1">
+              <a class="text-link" href="<%= post.path %>">
+                <%= post.title %>
+              </a>
+            </h3>
             <div class="meta mb-1">
               <span class="date"><%= t(:posted_at) %> <%= time_ago_in_words(post.published_at) %></span>
               <span class="time"><%= (post.content || "").size / 200 %> <%= t(:min_read) %></span>
