--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -14,6 +14,8 @@
 <section class="blog-list px-3 py-5 p-md-5">
   <div class="container single-col-max-width">
     <% @posts.each do |post| %>
+      <% post.translated! unless default_locale? %>
+
       <div class="item mb-5">
         <div class="row g-3 g-xl-0">
           <div class="col-2 col-xl-3">
